--- a/ios/messageBox/Info.plist
+++ b/ios/messageBox/Info.plist
@@ -59,6 +59,8 @@
 	<string>Give Message box component periences permission to access your photos</string>
 	<key>NSRemindersUsageDescription</key>
 	<string>Allow Message box component to access your reminders</string>
+	<key>NSMicrophoneUsageDescription</key>
+    <string>Allow $(PRODUCT_NAME) to access your microphone</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
