--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "^35.0.0",
+    "expo-av": "^7.0.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
@@ -24,9 +25,11 @@
     "@babel/core": "^7.6.0",
     "@types/react": "^16.8.23",
     "@types/react-native": "^0.57.65",
+    "@types/styled-components": "^4.4.0",
     "babel-preset-expo": "^7.0.0",
     "jest-expo": "^35.0.0",
     "jetifier": "^1.6.4",
+    "reactotron-react-native": "^4.0.2",
     "typescript": "^3.4.5"
   },
   "jest": {
