--- a/ios/messageBox/Info.plist
+++ b/ios/messageBox/Info.plist
@@ -61,6 +61,8 @@
 	<string>Allow Message box component to access your reminders</string>
 	<key>NSMicrophoneUsageDescription</key>
     <string>Allow $(PRODUCT_NAME) to access your microphone</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Give $(PRODUCT_NAME) permission to save photos</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
