--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@react-native-community/cameraroll": "^1.3.0",
+    "events": "^3.0.0",
     "expo": "^35.0.0",
     "expo-av": "^7.0.1",
     "expo-image-picker": "^7.0.0",
+    "queue": "^6.0.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
