--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/cameraroll": "^1.3.0",
     "events": "^3.0.0",
     "expo": "^35.0.0",
     "expo-av": "^7.0.1",
@@ -19,11 +18,11 @@
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-modals": "^0.19.9",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "1.0.0-alpha.23",
     "react-native-unimodules": "~0.5.4",
     "react-native-web": "^0.11.7",
-    "rn-sliding-up-panel": "^2.4.0",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
